intel/bench_214/extr_.ccvlibnnccmdconvolutioncpu_opt_ccv_nnc_conv_cpu_4x4_3x3_winograd.c__ccv_nnc_winograd_4x4_3x3_gwtg_ref_with_main/log.txt
bench_214/extr_.ccvlibnnccmdconvolutioncpu_opt_ccv_nnc_conv_cpu_4x4_3x3_winograd.c__ccv_nnc_winograd_4x4_3x3_gwtg_ref_with_main/extr_.ccvlibnnccmdconvolutioncpu_opt_ccv_nnc_conv_cpu_4x4_3x3_winograd.c__ccv_nnc_winograd_4x4_3x3_gwtg_ref_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.ccvlibnnccmdconvolutioncpu_opt_ccv_nnc_conv_cpu_4x4_3x3_winograd.c__ccv_nnc_winograd_4x4_3x3_gwtg_ref_with_main/extr_.ccvlibnnccmdconvolutioncpu_opt_ccv_nnc_conv_cpu_4x4_3x3_winograd.c__ccv_nnc_winograd_4x4_3x3_gwtg_ref_with_main.c:118:22: error: default initialization of an object of const type 'const float *const'
  const float *const w;
                     ^
                       = nullptr
bench_214/extr_.ccvlibnnccmdconvolutioncpu_opt_ccv_nnc_conv_cpu_4x4_3x3_winograd.c__ccv_nnc_winograd_4x4_3x3_gwtg_ref_with_main/extr_.ccvlibnnccmdconvolutioncpu_opt_ccv_nnc_conv_cpu_4x4_3x3_winograd.c__ccv_nnc_winograd_4x4_3x3_gwtg_ref_with_main.c:119:13: error: default initialization of an object of const type 'const int'
  const int c;
            ^
              = 0
3 errors generated.
HLS FPGA Parse FAILED.
